[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/ElementosBase/Torre.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/Tilesheet/colored_transparent.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 50.0

[node name="Torre" type="Area2D"]
script = ExtResource( 1 )

[node name="Alcance" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 118, 321, 17, 17 )
region_filter_clip = true

[node name="AtaqueTimer" type="Timer" parent="."]
wait_time = 2.0
[connection signal="area_entered" from="." to="." method="_on_Torre_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Torre_area_exited"]
[connection signal="timeout" from="AtaqueTimer" to="." method="_on_AtaqueTimer_timeout"]
